JVMCI compiler warning is truncated

XMLWordPrintable

    • b17

      $ java -Djdk.graal.CompilerConfiguration=XXcommunity HelloWorld
      [0.035s][warning][jit,compilation] JVMCI compiler disabled after 11 of 11 upcalls had errors (Last error: "uncaught exception in call_HotSpotJVMCIRuntime_compileMethod [jdk.graal.compiler.debug.GraalError: Compiler configuration 'XXcommunity' not found. Available configurations are: enterp

      The above message is truncated. It should be:

      [0.032s][warning][jit,compilation] JVMCI compiler disabled after 11 of 11 upcalls had errors (Last error: "uncaught exception in call_HotSpotJVMCIRuntime_compileMethod [jdk.graal.compiler.debug.GraalError: Compiler configuration 'XXcommunity' not found. Available configurations are: enterprise, community, economy]"). Use -Xlog:jit+compilation for more detail.

            Assignee:
            Douglas Simon
            Reporter:
            Douglas Simon
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: