8329191: JVMCI compiler warning is truncated

Reviewed-by: never